// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User should not render the edit privilege form if the userResults is empty 1`] = `
<div
  id="editUserPrivilege"
>
  <div
    id="editPrivilegeHeading"
  >
    <img
      alt=""
      id="editPrivilegeImg"
      src="privilege.png"
    />
    <div
      className=""
      id="editPrivilegeTitle"
    >
      Edit user privilege
    </div>
  </div>
  <div>
    <div>
      <form
        className="form-centered"
        onSubmit={[Function]}
      >
        <div>
          <label>
            Email:
          </label>
          <input
            className="inputBox"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            value=""
          />
        </div>
        <button
          className="submit"
        >
          <i
            className="fas fa-search"
          />
           Search
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`User should render a user's details using the props passed to it 1`] = `
<div
  id="editUserPrivilege"
>
  <div
    id="editPrivilegeHeading"
  >
    <img
      alt=""
      id="editPrivilegeImg"
      src="privilege.png"
    />
    <div
      className=""
      id="editPrivilegeTitle"
    >
      Edit user privilege
    </div>
  </div>
  <div>
    <div>
      <form
        className="form-centered"
        onSubmit={[Function]}
      >
        <div>
          <label>
            Email:
          </label>
          <input
            className="inputBox"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            value=""
          />
        </div>
        <button
          className="submit"
        >
          <i
            className="fas fa-search"
          />
           Search
        </button>
      </form>
    </div>
  </div>
  <div
    className="centeredContent"
  >
    <hr />
    <div>
      <div>
        Name: testForename testSurname
      </div>
      <div>
        Email: testEmail
      </div>
      <div>
        Permission: USER
      </div>
      <div>
        Verified: No
      </div>
    </div>
  </div>
  <div>
    <form
      className="form-centered"
      onSubmit={[Function]}
    >
      <div>
        <label>
          Set Permission:
        </label>
        <div>
          <select
            className="inputBox select-medium"
            name="permission"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            value=""
          >
            <option>
              Select permission level
            </option>
            <option
              value="USER"
            >
              USER
            </option>
            <option
              value="READ-ONLY"
            >
              READ-ONLY
            </option>
            <option
              value="ADMIN"
            >
              ADMIN
            </option>
            <option
              value="SUPER-USER"
            >
              SUPER-USER
            </option>
          </select>
        </div>
      </div>
      <button
        className="submit"
      >
        <i
          className="far fa-save"
        />
         Save
      </button>
    </form>
  </div>
</div>
`;
